After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676859 - [0.11] GstTagList and GST_EVENT_MULTI don't work
[0.11] GstTagList and GST_EVENT_MULTI don't work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
0.11.x
Other All
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-26 02:40 UTC by Matej Knopp
Modified: 2012-06-06 11:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matej Knopp 2012-05-26 02:40:23 UTC
Tag event has GstTagList as payload, which has always name "taglist". GST_EVENT_MULTI only works for events that have different names (event with same name gets overwritten on pad). However tag events have always the same  name "taglist", so instead of keeping multiple instances of subsequent taglists on pad, the new taglist always overwrites old one.
Comment 1 Wim Taymans 2012-06-06 11:06:27 UTC
commit c10d39a804b1b5562072cd6a5ae3b6a92bb51e88
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Jun 6 12:52:09 2012 +0200

    event: add name to sticky_multi events
    
    The name of the event is used to store multiple sticky events of a certain type
    on a pad.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676859